# sracat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  Snakefile  benchmark.sh  bigbench.sh  build-setup.yml  build.rs  pixi.toml  release.py  shim.c  shim.h
.github/workflows/: build-setup.yml  release.yml
benchmarking/: Snakefile  bigbench.sh  pixi.toml  plot.py  results.tsv
src/: ffi.rs  main.rs
tests/: cli.rs
